--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/node": "^20.2.3",
     "chokidar": "^3.5.3",
+    "glob": "^10.2.6",
     "kleur": "^4.1.5",
     "typescript": "^5.0.4"
   }
